--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/material": "^6.1.8",
     "bootstrap": "^5.3.3",
     "next": "14.2.13",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
-    "sass": "^1.79.3"
+    "react-hook-form": "^7.53.2",
+    "sass": "^1.81.0"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
