--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,15 +6,15 @@
       "esnext"
     ],
     "allowJs": true,
-    "noImplicitAny": false,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "noImplicitAny": false,
     "jsx": "preserve",
     "incremental": true,
     "plugins": [
