--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@mui/material": "^6.1.8",
     "bootstrap": "^5.3.3",
     "next": "14.2.13",
+    "node-ical": "^0.20.1",
     "nodemailer": "^6.9.16",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
+    "react-datepicker": "^8.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "sass": "^1.81.0"
