--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mdi/react": "^1.6.1",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "bootstrap": "^5.3.3",
     "next": "14.2.13",
     "node-ical": "^0.20.1",
